# sdlhana

./: AUTHORS  COPYING  CREDITS  ChangeLog  Doxyfile  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  configure  configure.in  sdlhana.kdevelop
.github/: FUNDING.yml
debian/: changelog  control  copyright  menu  rules
src/: Makefile.am  Makefile.in  bot.cpp  bot.h  card.cpp  card.h  compress.cpp  font.cpp  font.h  game.cpp  game.h  general.cpp  general.h  ini.cpp  ini.h  main.cpp  main.h  player.cpp  player.h  sdlhana.dsp  sdlhana.rc  sdlhana.xpm  sound.cpp  text.cpp  util.cpp
src/data/: Makefile.am  Makefile.in  sdlhana.ini  titleschs.txt  titleseng.txt  titlesfra.txt  titlesjpn.txt
src/fonts/: Makefile.am  Makefile.in  chs.fnt  eng.fnt  fra.fnt  jpn.fnt
src/images/: Makefile.am  Makefile.in
src/sound/: Makefile.am  Makefile.in
tools/fntgen/: Makefile  ascii.txt  fntgen.cpp
tools/title2cl/: title2cl.c
